Fix small control alignment < 450px

--- a/octoprint_touchui/static/less/_generated/touchui.bundled.less
+++ b/octoprint_touchui/static/less/_generated/touchui.bundled.less
@@ -3881,7 +3881,7 @@ right: 26.5%;
 top: 0;
 
 @media (max-width: 450px) {
-right: 28.5%;
+right: 31.5%;
 }
 
 h1 {
