--- a/octoprint_touchui/static/less/tabs/controls.less
+++ b/octoprint_touchui/static/less/tabs/controls.less
@@ -33,7 +33,7 @@
 			top: 0;
 
 			@media (max-width: 450px) {
-				right: 28.5%;
+				right: 31.5%;
 			}
 
 			h1 {
